# pp-base-webview-app

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/: base-gresource.c  base-gresource.xml  main.c  www-gresource.c
ui/: webview.ui
www/: esbuild.json  index.html  package.json  r.js  rollup.config.mjs  webview.ui
www/css/: style.css
www/css-utility/: build.json
www/css-utility/config/: bgcolor.json  border.json  effects.json  typography.json
www/js/: bundle.js  index.js  ready.js
xml/: www-gresource.xml
